--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 .vscode
 
 archive/testing-files/auth/*
+proof-of-concept/metropolis/src/gsheets/auth/*
 proof-of-concept/config.py
 raw-data/*
 documentation/*
